Creé categorias para las portadas de péliculas

--- a/index.html
+++ b/index.html
@@ -30,16 +30,21 @@
         </header>
         <main class="todas-p">
             <div>
-                <h2>Las mas Taquilleras</h2>
-                <img src="./imagenes/Portada-Avengers-End-Game.jpg" alt="" class="portada">
+                <h1>E</h1>
+                <h2>Las mas Taquilleras:</h2>
+                <p id="espacio">E</p>
+                <img src="./imagenes/Portada-Doctor-Strange-2-Multiverse-of-Madness.jpg" alt="" class="portada">
                 <img src="./imagenes/Portada-Avengers-Infinity-War.jpg" alt="" class="portada">
                 <img src="./imagenes/Portada-Spiderman-3-No-Way-Home.jpg" alt="" class="portada">
-                <img src="./imagenes/Portada-Black-Panther-2-Wakanda-Forever.jpg" alt="" class="portada">
+                <img src="./imagenes/Portada-Avengers-End-Game.jpg" alt="" class="portada">
                 <img src="./imagenes/Portada-Avengers-1.jpg" alt="" class="portada">
-                <img src="./imagenes/Portada-Civil-War.jpg" alt="" class="portada">
-                <img src="./imagenes/Portada-Doctor-Strange-2-Multiverse-of-Madness.jpg" alt="" class="portada">
-                <img src="./imagenes/Portada-capitánamérica-the first-avenger.jpg" alt="" class="portada">
-                <img src="./imagenes/Portada-Ant-Man-1.jpg" alt="" class="portada">
+                <img src="./imagenes/Portada-el-increible-hulk.jpg" alt="" class="portada">
+                <img src="./imagenes/Portada-Black-Panther-2-Wakanda-Forever.jpg" alt="" class="portada">
+                <img src="./imagenes/Portada-Capitán-américa-2.jpg" alt="" class="portada">
+                <h1>E</h1>
+                <h2>También te puede interesar:</h2>
+                <p id="espacio">E</p>
+                <img src="./imagenes/Portada-Shang-chi-and-the-Legend-ofthe-ten-rings.jpg" alt="" class="portada">
                 <img src="./imagenes/Portada-Black-Panther-1.jpg" alt="" class="portada">
                 <img src="./imagenes/Portada-Ant-Man-2.jpg" alt="" class="portada">
                 <img src="./imagenes/Portada-Avengers-2.jpg" alt="" class="portada">
@@ -47,14 +52,18 @@
                 <img src="./imagenes/Portada-capitana-marvel.jpg" alt="" class="portada">
                 <img src="./imagenes/Portada-Capitán-américa-2.jpg" alt="" class="portada">
                 <img src="./imagenes/Portada-Doctor-Strange-1.jpg" alt="" class="portada">
+                <h1>E</h1>
+                <h2>Universo Cinematografico de Marvel:</h2>
+                <p id="espacio">E</p>
                 <img src="./imagenes/Portada-el-increible-hulk.jpg" alt="" class="portada">
                 <img src="./imagenes/Portada-Eternals.jpg" alt="" class="portada">
-                <img src="./imagenes/Portada-Guardianes-Of-The-Galaxy-1.jpg" alt="" class="portada">
-                <img src="./imagenes/Portada-Iron Man-1.jpg" alt="" class="portada">
+                <img src="./imagenes/Portada-Spiderman-1.jpg" alt="" class="portada">
+                <img src="./imagenes/Portada-Morbius.jpg" alt="" class="portada">
                 <img src="./imagenes/Portada-Thor-2.jpg" alt="" class="portada">
                 <img src="./imagenes/Portada-Spiderman-2.jpg" alt="" class="portada">
-                <img src="./imagenes/Portada-Iron-Man-3.jpg" alt="" class="portada">
+                <img src="./imagenes/Portada-Avengers-1.jpg" alt="" class="portada">
                 <img src="./imagenes/Portada-Shang-chi-and-the-Legend-ofthe-ten-rings.jpg" alt="" class="portada">
+                <div class="footer"><h1>E</h1></div>
             </div>
         </main>
     </body>
