--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
         <link rel="stylesheet" href="botones.css">
         <link rel="stylesheet" href="estilos.css">
     </head>
-    <body>
-        <header>
+    <body style="background-image: url(./imagenes/background-body.jpg);">
+        <header style="background-image: url(./imagenes/);">
             <a class="logo" href="https://rakuten.tv/es">RAKUTEN_TV</a>
             <nav class="navigation">
                 <div class="estreno">
-                    <a class="espacio" href="#">--------</a>
+                    <a class="espacio" href="#">-------</a>
                     <button class="gris">Taquilla</button>
                     <button class="gris">En estreno</button>
                     <a class="espacio" href="#">---</a>
@@ -28,42 +28,56 @@
                 </div> 
             </nav>
         </header>
+        <h1>p</h1>
+            <div class="titulo"><a href="https://www.youtube.com/watch?v=51S4llUG5QM" target="_blank"><img src="./imagenes/background-ant-man-quantumania.jpg" alt="" class="port-grande"></a><h3></h3></div>
         <main class="todas-p">
             <div>
                 <h1>E</h1>
-                <h2>Las mas Taquilleras:</h2>
+                <h2>Universo Cinematografico de Marvel:</h2>
                 <p id="espacio">E</p>
-                <img src="./imagenes/Portada-Doctor-Strange-2-Multiverse-of-Madness.jpg" alt="" class="portada">
-                <img src="./imagenes/Portada-Avengers-Infinity-War.jpg" alt="" class="portada">
-                <img src="./imagenes/Portada-Spiderman-3-No-Way-Home.jpg" alt="" class="portada">
-                <img src="./imagenes/Portada-Avengers-End-Game.jpg" alt="" class="portada">
-                <img src="./imagenes/Portada-Avengers-1.jpg" alt="" class="portada">
-                <img src="./imagenes/Portada-el-increible-hulk.jpg" alt="" class="portada">
-                <img src="./imagenes/Portada-Black-Panther-2-Wakanda-Forever.jpg" alt="" class="portada">
-                <img src="./imagenes/Portada-Capitán-américa-2.jpg" alt="" class="portada">
+                <a href="https://www.youtube.com/watch?v=aWzlQ2N6qqg" target="_blank"><img src="./imagenes/Portada-Doctor-Strange-2-Multiverse-of-Madness.jpg" alt="" class="portada"></a>
+                <a href="https://www.youtube.com/watch?v=823iAZOEKt8" target="_blank"><img src="./imagenes/Portada-Avengers-Infinity-War.jpg" alt="" class="portada"></a>
+                <a href="https://www.youtube.com/watch?v=6QkTCmhOzuA" target="_blank"><img src="./imagenes/Portada-Spiderman-3-No-Way-Home.jpg" alt="" class="portada"></a>
+                <a href="https://www.youtube.com/watch?v=znk2OICHbjY" target="_blank"><img src="./imagenes/Portada-Avengers-End-Game.jpg" alt="" class="portada"></a>
+                <a href="https://www.youtube.com/watch?v=yNXfOOL8824" target="_blank"><img src="./imagenes/Portada-Avengers-1.jpg" alt="" class="portada"></a>
+                <a href="https://www.youtube.com/watch?v=P2TA4kB6EcI" target="_blank"><img src="./imagenes/Portada-el-increible-hulk.jpg" alt="" class="portada"></a>
+                <a href="https://www.youtube.com/watch?v=BPjbiZQmBI4" target="_blank"><img src="./imagenes/Portada-Black-Panther-2-Wakanda-Forever.jpg" alt="" class="portada"></a>
+                <a href="https://www.youtube.com/watch?v=7SlILk2WMTI" target="_blank"><img src="./imagenes/Portada-Capitán-américa-2.jpg" alt="" class="portada"></a>
                 <h1>E</h1>
                 <h2>También te puede interesar:</h2>
                 <p id="espacio">E</p>
-                <img src="./imagenes/Portada-Shang-chi-and-the-Legend-ofthe-ten-rings.jpg" alt="" class="portada">
-                <img src="./imagenes/Portada-Black-Panther-1.jpg" alt="" class="portada">
-                <img src="./imagenes/Portada-Ant-Man-2.jpg" alt="" class="portada">
-                <img src="./imagenes/Portada-Avengers-2.jpg" alt="" class="portada">
-                <img src="./imagenes/Portada-Black-Widow.jpg" alt="" class="portada">
-                <img src="./imagenes/Portada-capitana-marvel.jpg" alt="" class="portada">
-                <img src="./imagenes/Portada-Capitán-américa-2.jpg" alt="" class="portada">
-                <img src="./imagenes/Portada-Doctor-Strange-1.jpg" alt="" class="portada">
+                <a href="https://www.youtube.com/watch?v=HjzATzdlN2A" target="_blank"><img src="./imagenes/Portada-Shang-chi-and-the-Legend-ofthe-ten-rings.jpg" alt="" class="portada"></a>
+                <a href="https://www.youtube.com/watch?v=JK-wAfAvJ0g" target="_blank"><img src="./imagenes/Portada-Black-Panther-1.jpg" alt="" class="portada"></a>
+                <a href="https://www.youtube.com/watch?v=1xdCWAagZfw" target="_blank"><img src="./imagenes/Portada-Ant-Man-2.jpg" alt="" class="portada"></a>
+                <a href="https://www.youtube.com/watch?v=uLmntu8OH-I" target="_blank"><img src="./imagenes/Portada-Avengers-2.jpg" alt="" class="portada"></a>
+                <a href="https://www.youtube.com/watch?v=Cy_znrsuXic" target="_blank"><img src="./imagenes/Portada-Black-Widow.jpg" alt="" class="portada"></a>
+                <a href="https://www.youtube.com/watch?v=MJIz2gf3Wa8" target="_blank"><img src="./imagenes/Portada-capitana-marvel.jpg" alt="" class="portada"></a>
+                <a href="https://www.youtube.com/watch?v=7SlILk2WMTI" target="_blank"><img src="./imagenes/Portada-Capitán-américa-2.jpg" alt="" class="portada"></a>
+                <a href="https://www.youtube.com/watch?v=PqTILYUNU3s" target="_blank"><img src="./imagenes/Portada-Doctor-Strange-1.jpg" alt="" class="portada"></a>
+                <h1>E</h1>
+                <h2>Películas:</h2>
+                <p id="espacio">E</p>
+                <a href="https://www.youtube.com/watch?v=P2TA4kB6EcI" target="_blank"><img src="./imagenes/Portada-el-increible-hulk.jpg" alt="" class="portada"></a>
+                <a href="https://www.youtube.com/watch?v=MtYMZRw_4NA" target="_blank"><img src="./imagenes/Portada-Eternals.jpg" alt="" class="portada"></a>
+                <a href="https://www.youtube.com/watch?v=grusgXCahH8" target="_blank"><img src="./imagenes/Portada-Spiderman-1.jpg" alt="" class="portada"></a>
+                <a href="https://www.youtube.com/watch?v=C4XP8FSqTTE" target="_blank"><img src="./imagenes/Portada-Morbius.jpg" alt="" class="portada"></a>
+                <a href="https://www.youtube.com/watch?v=npvJ9FTgZbM" target="_blank"><img src="./imagenes/Portada-Thor-2.jpg" alt="" class="portada"></a>
+                <a href="https://www.youtube.com/watch?v=Nt9L1jCKGnE" target="_blank"><img src="./imagenes/Portada-Spiderman-2.jpg" alt="" class="portada"></a>
+                <a href="https://www.youtube.com/watch?v=yNXfOOL8824" target="_blank"><img src="./imagenes/Portada-Avengers-1.jpg" alt="" class="portada"></a>
+                <a href="https://www.youtube.com/watch?v=HjzATzdlN2A" target="_blank"><img src="./imagenes/Portada-Shang-chi-and-the-Legend-ofthe-ten-rings.jpg" alt="" class="portada"></a>
                 <h1>E</h1>
                 <h2>Universo Cinematografico de Marvel:</h2>
                 <p id="espacio">E</p>
-                <img src="./imagenes/Portada-el-increible-hulk.jpg" alt="" class="portada">
-                <img src="./imagenes/Portada-Eternals.jpg" alt="" class="portada">
-                <img src="./imagenes/Portada-Spiderman-1.jpg" alt="" class="portada">
-                <img src="./imagenes/Portada-Morbius.jpg" alt="" class="portada">
-                <img src="./imagenes/Portada-Thor-2.jpg" alt="" class="portada">
-                <img src="./imagenes/Portada-Spiderman-2.jpg" alt="" class="portada">
-                <img src="./imagenes/Portada-Avengers-1.jpg" alt="" class="portada">
-                <img src="./imagenes/Portada-Shang-chi-and-the-Legend-ofthe-ten-rings.jpg" alt="" class="portada">
+                <a href="https://www.youtube.com/watch?v=aWzlQ2N6qqg" target="_blank"><img src="./imagenes/Portada-Doctor-Strange-2-Multiverse-of-Madness.jpg" alt="" class="portada"></a>
+                <a href="https://www.youtube.com/watch?v=823iAZOEKt8" target="_blank"><img src="./imagenes/Portada-Avengers-Infinity-War.jpg" alt="" class="portada"></a>
+                <a href="https://www.youtube.com/watch?v=6QkTCmhOzuA" target="_blank"><img src="./imagenes/Portada-Spiderman-3-No-Way-Home.jpg" alt="" class="portada"></a>
+                <a href="https://www.youtube.com/watch?v=znk2OICHbjY" target="_blank"><img src="./imagenes/Portada-Avengers-End-Game.jpg" alt="" class="portada"></a>
+                <a href="https://www.youtube.com/watch?v=yNXfOOL8824" target="_blank"><img src="./imagenes/Portada-Avengers-1.jpg" alt="" class="portada"></a>
+                <a href="https://www.youtube.com/watch?v=P2TA4kB6EcI" target="_blank"><img src="./imagenes/Portada-el-increible-hulk.jpg" alt="" class="portada"></a>
+                <a href="https://www.youtube.com/watch?v=BPjbiZQmBI4" target="_blank"><img src="./imagenes/Portada-Black-Panther-2-Wakanda-Forever.jpg" alt="" class="portada"></a>
+                <a href="https://www.youtube.com/watch?v=7SlILk2WMTI" target="_blank"><img src="./imagenes/Portada-Capitán-américa-2.jpg" alt="" class="portada"></a>
                 <div class="footer"><h1>E</h1></div>
+                
             </div>
         </main>
     </body>
