Agregué un color de sombra distinto para cada portada de peliculas

--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
         <title>RAKUTEN_TV</title>
         <link rel="stylesheet" href="botones.css">
         <link rel="stylesheet" href="estilos.css">
+        <link rel="stylesheet" href="sombras-p.css">
     </head>
     <body style="background-image: url(./imagenes/background-body.jpg);">
         <header style="background-image: url(./imagenes/);">
-            <a class="logo" href="https://rakuten.tv/es">RAKUTEN_TV</a>
+            <a class="logo" href="https://rakuten.tv/es" target="_blank">RAKUTEN_TV</a>
             <nav class="navigation">
                 <div class="estreno">
                     <a class="espacio" href="#">-------</a>
@@ -20,7 +21,7 @@
                     <input type="text" placeholder="Buscar...">
                 </div>
                 <div class="login">
-                    <a href="https://support.google.com/android/?hl=es-419#topic=7313011">AYUDA Y DISPOSITIVOS</a>
+                    <a href="https://support.google.com/android/?hl=es-419#topic=7313011" target="_blank">AYUDA Y DISPOSITIVOS</a>
                     <a class="espacio" href="#">--------</a>
                     <button class="btn-entrar">ENTRAR</button>
                     <a class="espacio" href="#">---</a>
@@ -29,55 +30,56 @@
             </nav>
         </header>
         <h1>p</h1>
+        <h1 class="prox">P R O X I M A M E N T E:</h1>
+        <h1>p</h1>
             <div class="titulo"><a href="https://www.youtube.com/watch?v=51S4llUG5QM" target="_blank"><img src="./imagenes/background-ant-man-quantumania.jpg" alt="" class="port-grande"></a><h3></h3></div>
         <main class="todas-p">
             <div>
-                <h1>E</h1>
+                <h1 class="espacio">E</h1>
                 <h2>Universo Cinematografico de Marvel:</h2>
                 <p id="espacio">E</p>
-                <a href="https://www.youtube.com/watch?v=aWzlQ2N6qqg" target="_blank"><img src="./imagenes/Portada-Doctor-Strange-2-Multiverse-of-Madness.jpg" alt="" class="portada"></a>
-                <a href="https://www.youtube.com/watch?v=823iAZOEKt8" target="_blank"><img src="./imagenes/Portada-Avengers-Infinity-War.jpg" alt="" class="portada"></a>
-                <a href="https://www.youtube.com/watch?v=6QkTCmhOzuA" target="_blank"><img src="./imagenes/Portada-Spiderman-3-No-Way-Home.jpg" alt="" class="portada"></a>
-                <a href="https://www.youtube.com/watch?v=znk2OICHbjY" target="_blank"><img src="./imagenes/Portada-Avengers-End-Game.jpg" alt="" class="portada"></a>
-                <a href="https://www.youtube.com/watch?v=yNXfOOL8824" target="_blank"><img src="./imagenes/Portada-Avengers-1.jpg" alt="" class="portada"></a>
-                <a href="https://www.youtube.com/watch?v=P2TA4kB6EcI" target="_blank"><img src="./imagenes/Portada-el-increible-hulk.jpg" alt="" class="portada"></a>
-                <a href="https://www.youtube.com/watch?v=BPjbiZQmBI4" target="_blank"><img src="./imagenes/Portada-Black-Panther-2-Wakanda-Forever.jpg" alt="" class="portada"></a>
-                <a href="https://www.youtube.com/watch?v=7SlILk2WMTI" target="_blank"><img src="./imagenes/Portada-Capitán-américa-2.jpg" alt="" class="portada"></a>
-                <h1>E</h1>
+                <a href="https://www.youtube.com/watch?v=5aXJXkmZh1k&list=PLZM_vrwo7qfeRHbdUl0OXSchrLZuUXST8&index=1" target="_blank"><img src="./imagenes/Portada-Doctor-Strange-2-Multiverse-of-Madness.jpg" alt="" class="portada" id="rojo"></a>
+                <a href="https://www.youtube.com/watch?v=823iAZOEKt8" target="_blank"><img src="./imagenes/Portada-Avengers-Infinity-War.jpg" alt="" class="portada" id="naranja"></a>
+                <a href="https://www.youtube.com/watch?v=6QkTCmhOzuA" target="_blank"><img src="./imagenes/Portada-Spiderman-3-No-Way-Home.jpg" alt="" class="portada" id="rojo"></a>
+                <a href="https://www.youtube.com/watch?v=znk2OICHbjY" target="_blank"><img src="./imagenes/Portada-Avengers-End-Game.jpg" alt="" class="portada" id="morado"></a>
+                <a href="https://www.youtube.com/watch?v=yNXfOOL8824" target="_blank"><img src="./imagenes/Portada-Avengers-1.jpg" alt="" class="portada" id="azul"></a>
+                <a href="https://www.youtube.com/watch?v=P2TA4kB6EcI" target="_blank"><img src="./imagenes/Portada-el-increible-hulk.jpg" alt="" class="portada" id="verde"></a>
+                <a href="https://www.youtube.com/watch?v=BPjbiZQmBI4" target="_blank"><img src="./imagenes/Portada-Black-Panther-2-Wakanda-Forever.jpg" alt="" class="portada" id="morado"></a>
+                <a href="https://www.youtube.com/watch?v=7SlILk2WMTI" target="_blank"><img src="./imagenes/Portada-Capitán-américa-2.jpg" alt="" class="portada" id="azul"></a>
+                <h1 class="espacio">E</h1>
                 <h2>También te puede interesar:</h2>
                 <p id="espacio">E</p>
-                <a href="https://www.youtube.com/watch?v=HjzATzdlN2A" target="_blank"><img src="./imagenes/Portada-Shang-chi-and-the-Legend-ofthe-ten-rings.jpg" alt="" class="portada"></a>
-                <a href="https://www.youtube.com/watch?v=JK-wAfAvJ0g" target="_blank"><img src="./imagenes/Portada-Black-Panther-1.jpg" alt="" class="portada"></a>
-                <a href="https://www.youtube.com/watch?v=1xdCWAagZfw" target="_blank"><img src="./imagenes/Portada-Ant-Man-2.jpg" alt="" class="portada"></a>
-                <a href="https://www.youtube.com/watch?v=uLmntu8OH-I" target="_blank"><img src="./imagenes/Portada-Avengers-2.jpg" alt="" class="portada"></a>
-                <a href="https://www.youtube.com/watch?v=Cy_znrsuXic" target="_blank"><img src="./imagenes/Portada-Black-Widow.jpg" alt="" class="portada"></a>
-                <a href="https://www.youtube.com/watch?v=MJIz2gf3Wa8" target="_blank"><img src="./imagenes/Portada-capitana-marvel.jpg" alt="" class="portada"></a>
-                <a href="https://www.youtube.com/watch?v=7SlILk2WMTI" target="_blank"><img src="./imagenes/Portada-Capitán-américa-2.jpg" alt="" class="portada"></a>
-                <a href="https://www.youtube.com/watch?v=PqTILYUNU3s" target="_blank"><img src="./imagenes/Portada-Doctor-Strange-1.jpg" alt="" class="portada"></a>
-                <h1>E</h1>
+                <a href="https://www.youtube.com/watch?v=HjzATzdlN2A" target="_blank"><img src="./imagenes/Portada-Shang-chi-and-the-Legend-ofthe-ten-rings.jpg" alt="" class="portada" id="azul-claro"></a>
+                <a href="https://www.youtube.com/watch?v=JK-wAfAvJ0g" target="_blank"><img src="./imagenes/Portada-Black-Panther-1.jpg" alt="" class="portada" id="morado"></a>
+                <a href="https://www.youtube.com/watch?v=1xdCWAagZfw" target="_blank"><img src="./imagenes/Portada-Ant-Man-2.jpg" alt="" class="portada" id="amarillo"></a>
+                <a href="https://www.youtube.com/watch?v=uLmntu8OH-I" target="_blank"><img src="./imagenes/Portada-Avengers-2.jpg" alt="" class="portada" id="rojo"></a>
+                <a href="https://www.youtube.com/watch?v=Cy_znrsuXic" target="_blank"><img src="./imagenes/Portada-Black-Widow.jpg" alt="" class="portada" id="rojo"></a>
+                <a href="https://www.youtube.com/watch?v=MJIz2gf3Wa8" target="_blank"><img src="./imagenes/Portada-capitana-marvel.jpg" alt="" class="portada" id="azul"></a>
+                <a href="https://www.youtube.com/watch?v=7SlILk2WMTI" target="_blank"><img src="./imagenes/Portada-Capitán-américa-2.jpg" alt="" class="portada" id="azul"></a>
+                <a href="https://www.youtube.com/watch?v=PqTILYUNU3s" target="_blank"><img src="./imagenes/Portada-Doctor-Strange-1.jpg" alt="" class="portada" id="naranja"></a>
+                <h1 class="espacio">E</h1>
                 <h2>Películas:</h2>
                 <p id="espacio">E</p>
-                <a href="https://www.youtube.com/watch?v=P2TA4kB6EcI" target="_blank"><img src="./imagenes/Portada-el-increible-hulk.jpg" alt="" class="portada"></a>
-                <a href="https://www.youtube.com/watch?v=MtYMZRw_4NA" target="_blank"><img src="./imagenes/Portada-Eternals.jpg" alt="" class="portada"></a>
-                <a href="https://www.youtube.com/watch?v=grusgXCahH8" target="_blank"><img src="./imagenes/Portada-Spiderman-1.jpg" alt="" class="portada"></a>
-                <a href="https://www.youtube.com/watch?v=C4XP8FSqTTE" target="_blank"><img src="./imagenes/Portada-Morbius.jpg" alt="" class="portada"></a>
-                <a href="https://www.youtube.com/watch?v=npvJ9FTgZbM" target="_blank"><img src="./imagenes/Portada-Thor-2.jpg" alt="" class="portada"></a>
-                <a href="https://www.youtube.com/watch?v=Nt9L1jCKGnE" target="_blank"><img src="./imagenes/Portada-Spiderman-2.jpg" alt="" class="portada"></a>
-                <a href="https://www.youtube.com/watch?v=yNXfOOL8824" target="_blank"><img src="./imagenes/Portada-Avengers-1.jpg" alt="" class="portada"></a>
-                <a href="https://www.youtube.com/watch?v=HjzATzdlN2A" target="_blank"><img src="./imagenes/Portada-Shang-chi-and-the-Legend-ofthe-ten-rings.jpg" alt="" class="portada"></a>
-                <h1>E</h1>
+                <a href="https://www.youtube.com/watch?v=P2TA4kB6EcI" target="_blank"><img src="./imagenes/Portada-el-increible-hulk.jpg" alt="" class="portada" id="verde"></a>
+                <a href="https://www.youtube.com/watch?v=MtYMZRw_4NA" target="_blank"><img src="./imagenes/Portada-Eternals.jpg" alt="" class="portada" id="amarillo"></a>
+                <a href="https://www.youtube.com/watch?v=grusgXCahH8" target="_blank"><img src="./imagenes/Portada-Spiderman-1.jpg" alt="" class="portada" id="azul"></a>
+                <a href="https://www.youtube.com/watch?v=C4XP8FSqTTE" target="_blank"><img src="./imagenes/Portada-Morbius.jpg" alt="" class="portada" id="turqui"></a>
+                <a href="https://www.youtube.com/watch?v=npvJ9FTgZbM" target="_blank"><img src="./imagenes/Portada-Thor-2.jpg" alt="" class="portada" id="rojo"></a>
+                <a href="https://www.youtube.com/watch?v=Nt9L1jCKGnE" target="_blank"><img src="./imagenes/Portada-Spiderman-2.jpg" alt="" class="portada" id="verde"></a>
+                <a href="https://www.youtube.com/watch?v=yNXfOOL8824" target="_blank"><img src="./imagenes/Portada-Avengers-1.jpg" alt="" class="portada" id="azul"></a>
+                <a href="https://www.youtube.com/watch?v=HjzATzdlN2A" target="_blank"><img src="./imagenes/Portada-Shang-chi-and-the-Legend-ofthe-ten-rings.jpg" alt="" class="portada" id="azul-claro"></a>
+                <h1 class="espacio">E</h1>
                 <h2>Universo Cinematografico de Marvel:</h2>
                 <p id="espacio">E</p>
-                <a href="https://www.youtube.com/watch?v=aWzlQ2N6qqg" target="_blank"><img src="./imagenes/Portada-Doctor-Strange-2-Multiverse-of-Madness.jpg" alt="" class="portada"></a>
-                <a href="https://www.youtube.com/watch?v=823iAZOEKt8" target="_blank"><img src="./imagenes/Portada-Avengers-Infinity-War.jpg" alt="" class="portada"></a>
-                <a href="https://www.youtube.com/watch?v=6QkTCmhOzuA" target="_blank"><img src="./imagenes/Portada-Spiderman-3-No-Way-Home.jpg" alt="" class="portada"></a>
-                <a href="https://www.youtube.com/watch?v=znk2OICHbjY" target="_blank"><img src="./imagenes/Portada-Avengers-End-Game.jpg" alt="" class="portada"></a>
-                <a href="https://www.youtube.com/watch?v=yNXfOOL8824" target="_blank"><img src="./imagenes/Portada-Avengers-1.jpg" alt="" class="portada"></a>
-                <a href="https://www.youtube.com/watch?v=P2TA4kB6EcI" target="_blank"><img src="./imagenes/Portada-el-increible-hulk.jpg" alt="" class="portada"></a>
-                <a href="https://www.youtube.com/watch?v=BPjbiZQmBI4" target="_blank"><img src="./imagenes/Portada-Black-Panther-2-Wakanda-Forever.jpg" alt="" class="portada"></a>
-                <a href="https://www.youtube.com/watch?v=7SlILk2WMTI" target="_blank"><img src="./imagenes/Portada-Capitán-américa-2.jpg" alt="" class="portada"></a>
-                <div class="footer"><h1>E</h1></div>
-                
+                <a href="https://www.youtube.com/watch?v=aWzlQ2N6qqg" target="_blank"><img src="./imagenes/Portada-Doctor-Strange-2-Multiverse-of-Madness.jpg" alt="" class="portada" id="rojo"></a>
+                <a href="https://www.youtube.com/watch?v=823iAZOEKt8" target="_blank"><img src="./imagenes/Portada-Avengers-Infinity-War.jpg" alt="" class="portada" id="naranja"></a>
+                <a href="https://www.youtube.com/watch?v=6QkTCmhOzuA" target="_blank"><img src="./imagenes/Portada-Spiderman-3-No-Way-Home.jpg" alt="" class="portada" id="rojo"></a>
+                <a href="https://www.youtube.com/watch?v=znk2OICHbjY" target="_blank"><img src="./imagenes/Portada-Avengers-End-Game.jpg" alt="" class="portada" id="morado"></a>
+                <a href="https://www.youtube.com/watch?v=yNXfOOL8824" target="_blank"><img src="./imagenes/Portada-Avengers-1.jpg" alt="" class="portada" id="azul"></a>
+                <a href="https://www.youtube.com/watch?v=P2TA4kB6EcI" target="_blank"><img src="./imagenes/Portada-el-increible-hulk.jpg" alt="" class="portada" id="verde"></a>
+                <a href="https://www.youtube.com/watch?v=BPjbiZQmBI4" target="_blank"><img src="./imagenes/Portada-Black-Panther-2-Wakanda-Forever.jpg" alt="" class="portada" id="morado"></a>
+                <a href="https://www.youtube.com/watch?v=7SlILk2WMTI" target="_blank"><img src="./imagenes/Portada-Capitán-américa-2.jpg" alt="" class="portada" id="azul"></a>
+                <div class="espacio"><h1>E</h1></div>
             </div>
         </main>
     </body>
