Agregué un link para ver cada pelicula completa

--- a/index.html
+++ b/index.html
@@ -39,46 +39,46 @@
                 <h2>Universo Cinematografico de Marvel:</h2>
                 <p id="espacio">E</p>
                 <a href="https://www.youtube.com/watch?v=5aXJXkmZh1k&list=PLZM_vrwo7qfeRHbdUl0OXSchrLZuUXST8&index=1" target="_blank"><img src="./imagenes/Portada-Doctor-Strange-2-Multiverse-of-Madness.jpg" alt="" class="portada" id="rojo"></a>
-                <a href="https://www.youtube.com/watch?v=823iAZOEKt8" target="_blank"><img src="./imagenes/Portada-Avengers-Infinity-War.jpg" alt="" class="portada" id="naranja"></a>
-                <a href="https://www.youtube.com/watch?v=6QkTCmhOzuA" target="_blank"><img src="./imagenes/Portada-Spiderman-3-No-Way-Home.jpg" alt="" class="portada" id="rojo"></a>
-                <a href="https://www.youtube.com/watch?v=znk2OICHbjY" target="_blank"><img src="./imagenes/Portada-Avengers-End-Game.jpg" alt="" class="portada" id="morado"></a>
-                <a href="https://www.youtube.com/watch?v=yNXfOOL8824" target="_blank"><img src="./imagenes/Portada-Avengers-1.jpg" alt="" class="portada" id="azul"></a>
-                <a href="https://www.youtube.com/watch?v=P2TA4kB6EcI" target="_blank"><img src="./imagenes/Portada-el-increible-hulk.jpg" alt="" class="portada" id="verde"></a>
-                <a href="https://www.youtube.com/watch?v=BPjbiZQmBI4" target="_blank"><img src="./imagenes/Portada-Black-Panther-2-Wakanda-Forever.jpg" alt="" class="portada" id="morado"></a>
-                <a href="https://www.youtube.com/watch?v=7SlILk2WMTI" target="_blank"><img src="./imagenes/Portada-Capitán-américa-2.jpg" alt="" class="portada" id="azul"></a>
+                <a href="https://www.youtube.com/watch?v=BSKQ6MOAWtE&list=PLIw4JuB69kRpOz7V0esfzdBwP8VnW8eiZ&index=1&ab_channel=MRMARVEL" target="_blank"><img src="./imagenes/Portada-Avengers-Infinity-War.jpg" alt="" class="portada" id="naranja"></a>
+                <a href="https://www.youtube.com/watch?v=CIRQTZ4yZrI&list=PLOx4pXZYwcTNRqz0teHJpdguIyTIf9d9T&ab_channel=MovsFilms" target="_blank"><img src="./imagenes/Portada-Spiderman-3-No-Way-Home.jpg" alt="" class="portada" id="rojo"></a>
+                <a href="https://www.youtube.com/watch?v=nrwnXhclSBc&list=PLupnTlEAVwfe178COvwhBVcn2qoiDmwje&index=2&ab_channel=TurbopelisHD" target="_blank"><img src="./imagenes/Portada-Avengers-End-Game.jpg" alt="" class="portada" id="morado"></a>
+                <a href="https://www.youtube.com/watch?v=DbUVevG3kjU&list=PLdM370bC4nsQmoLXjsNFB8qabK0p_m-tM&ab_channel=JustCinematic" target="_blank"><img src="./imagenes/Portada-Avengers-1.jpg" alt="" class="portada" id="azul"></a>
+                <a href="https://www.youtube.com/watch?v=_FZZ375kI4E&ab_channel=%E2%84%A2Devytofficial5k%E2%84%A2" target="_blank"><img src="./imagenes/Portada-el-increible-hulk.jpg" alt="" class="portada" id="verde"></a>
+                <a href="https://www.youtube.com/watch?v=ksdQ95iSJqc&list=PLpTIXiiV0-YWgBoECnGY0jkQwuaCNv9ME&index=1&ab_channel=RebeccaLara" target="_blank"><img src="./imagenes/Portada-Black-Panther-2-Wakanda-Forever.jpg" alt="" class="portada" id="morado"></a>
+                <a href="https://www.youtube.com/watch?v=0qW00OQvXY0&list=PLVwtWN6xFrCXwO9VYw8bYmw4FhnSenLGm&ab_channel=MoviesLA" target="_blank"><img src="./imagenes/Portada-Capitán-américa-2.jpg" alt="" class="portada" id="azul"></a>
                 <h1 class="espacio">E</h1>
                 <h2>También te puede interesar:</h2>
                 <p id="espacio">E</p>
-                <a href="https://www.youtube.com/watch?v=HjzATzdlN2A" target="_blank"><img src="./imagenes/Portada-Shang-chi-and-the-Legend-ofthe-ten-rings.jpg" alt="" class="portada" id="azul-claro"></a>
-                <a href="https://www.youtube.com/watch?v=JK-wAfAvJ0g" target="_blank"><img src="./imagenes/Portada-Black-Panther-1.jpg" alt="" class="portada" id="morado"></a>
-                <a href="https://www.youtube.com/watch?v=1xdCWAagZfw" target="_blank"><img src="./imagenes/Portada-Ant-Man-2.jpg" alt="" class="portada" id="amarillo"></a>
-                <a href="https://www.youtube.com/watch?v=uLmntu8OH-I" target="_blank"><img src="./imagenes/Portada-Avengers-2.jpg" alt="" class="portada" id="rojo"></a>
-                <a href="https://www.youtube.com/watch?v=Cy_znrsuXic" target="_blank"><img src="./imagenes/Portada-Black-Widow.jpg" alt="" class="portada" id="rojo"></a>
-                <a href="https://www.youtube.com/watch?v=MJIz2gf3Wa8" target="_blank"><img src="./imagenes/Portada-capitana-marvel.jpg" alt="" class="portada" id="azul"></a>
-                <a href="https://www.youtube.com/watch?v=7SlILk2WMTI" target="_blank"><img src="./imagenes/Portada-Capitán-américa-2.jpg" alt="" class="portada" id="azul"></a>
-                <a href="https://www.youtube.com/watch?v=PqTILYUNU3s" target="_blank"><img src="./imagenes/Portada-Doctor-Strange-1.jpg" alt="" class="portada" id="naranja"></a>
+                <a href="https://www.youtube.com/watch?v=8fpmarrEFSY&list=PLimAIdWviQSO7nK6Lm6n6LYANpXhM2P67&ab_channel=MEJORESMOMENTOSFILMS" target="_blank"><img src="./imagenes/Portada-Shang-chi-and-the-Legend-ofthe-ten-rings.jpg" alt="" class="portada" id="azul-claro"></a>
+                <a href="https://www.youtube.com/watch?v=8fpmarrEFSY&list=PLimAIdWviQSO7nK6Lm6n6LYANpXhM2P67&ab_channel=MEJORESMOMENTOSFILMS" target="_blank"><img src="./imagenes/Portada-Black-Panther-1.jpg" alt="" class="portada" id="morado"></a>
+                <a href="https://www.youtube.com/watch?v=UixkL6NDPQE&list=PLi_AkyJfOX_nLh1--l3gW7Mk-ShjsmipV&ab_channel=BenjaHD" target="_blank"><img src="./imagenes/Portada-Ant-Man-2.jpg" alt="" class="portada" id="amarillo"></a>
+                <a href="https://www.youtube.com/watch?v=fz1p4FOiwYY&list=PLTDxuvBYiRC9ruLlVzEToglwZJkgbFnsd&ab_channel=PeliculasClypmars" target="_blank"><img src="./imagenes/Portada-Avengers-2.jpg" alt="" class="portada" id="rojo"></a>
+                <a href="https://www.youtube.com/watch?v=dzF8CgEqrdk&list=PL5lKuRlZrw0pbi1zqPQNVnGpy_n7-KChk&index=1&ab_channel=NOTENGONETFLIX" target="_blank"><img src="./imagenes/Portada-Black-Widow.jpg" alt="" class="portada" id="rojo"></a>
+                <a href="https://www.youtube.com/watch?v=hyRzXoqkuWI&list=PLuQ5FFO7WMOep3Scc3yBxxZbrv1Qlv8JW&index=1&ab_channel=MarvelUniverseEntertainment" target="_blank"><img src="./imagenes/Portada-capitana-marvel.jpg" alt="" class="portada" id="azul"></a>
+                <a href="https://www.youtube.com/watch?v=0qW00OQvXY0&list=PLVwtWN6xFrCXwO9VYw8bYmw4FhnSenLGm&ab_channel=MoviesLA" target="_blank"><img src="./imagenes/Portada-Capitán-américa-2.jpg" alt="" class="portada" id="azul"></a>
+                <a href="https://www.youtube.com/watch?v=A6HJwl1MxDQ&list=PLIDVJpgE7tu-KWsZ-zbDbNZPKGFjh5Iij&index=1&ab_channel=RottenTomatoesComingSoon" target="_blank"><img src="./imagenes/Portada-Doctor-Strange-1.jpg" alt="" class="portada" id="naranja"></a>
                 <h1 class="espacio">E</h1>
                 <h2>Películas:</h2>
                 <p id="espacio">E</p>
-                <a href="https://www.youtube.com/watch?v=P2TA4kB6EcI" target="_blank"><img src="./imagenes/Portada-el-increible-hulk.jpg" alt="" class="portada" id="verde"></a>
-                <a href="https://www.youtube.com/watch?v=MtYMZRw_4NA" target="_blank"><img src="./imagenes/Portada-Eternals.jpg" alt="" class="portada" id="amarillo"></a>
-                <a href="https://www.youtube.com/watch?v=grusgXCahH8" target="_blank"><img src="./imagenes/Portada-Spiderman-1.jpg" alt="" class="portada" id="azul"></a>
-                <a href="https://www.youtube.com/watch?v=C4XP8FSqTTE" target="_blank"><img src="./imagenes/Portada-Morbius.jpg" alt="" class="portada" id="turqui"></a>
-                <a href="https://www.youtube.com/watch?v=npvJ9FTgZbM" target="_blank"><img src="./imagenes/Portada-Thor-2.jpg" alt="" class="portada" id="rojo"></a>
-                <a href="https://www.youtube.com/watch?v=Nt9L1jCKGnE" target="_blank"><img src="./imagenes/Portada-Spiderman-2.jpg" alt="" class="portada" id="verde"></a>
-                <a href="https://www.youtube.com/watch?v=yNXfOOL8824" target="_blank"><img src="./imagenes/Portada-Avengers-1.jpg" alt="" class="portada" id="azul"></a>
-                <a href="https://www.youtube.com/watch?v=HjzATzdlN2A" target="_blank"><img src="./imagenes/Portada-Shang-chi-and-the-Legend-ofthe-ten-rings.jpg" alt="" class="portada" id="azul-claro"></a>
+                <a href="https://www.youtube.com/watch?v=_FZZ375kI4E&ab_channel=%E2%84%A2Devytofficial5k%E2%84%A2" target="_blank"><img src="./imagenes/Portada-el-increible-hulk.jpg" alt="" class="portada" id="verde"></a>
+                <a href="https://www.youtube.com/watch?v=LwLuL9QYHXo&ab_channel=BESTMOVIES" target="_blank"><img src="./imagenes/Portada-Eternals.jpg" alt="" class="portada" id="amarillo"></a>
+                <a href="https://www.youtube.com/watch?v=1SiJGy5TsD0&list=PLCno6luCyOg3f7LoilU1tYPhYS-sXDgYz&ab_channel=Jdgf" target="_blank"><img src="./imagenes/Portada-Spiderman-1.jpg" alt="" class="portada" id="azul"></a>
+                <a href="https://www.youtube.com/watch?v=6JCs9Fp7c9E&list=PLvJNBJ86z3sssXDPsugs3X3MTquv4uuNl&ab_channel=HighWolf%F0%9F%90%BA" target="_blank"><img src="./imagenes/Portada-Morbius.jpg" alt="" class="portada" id="turqui"></a>
+                <a href="https://www.youtube.com/watch?v=pmxD2Oj3A6o&list=PLGluuqkfXaEIVX0dU4dPd1qlMl7mgaWzV&index=1&ab_channel=Ultra4khdClips" target="_blank"><img src="./imagenes/Portada-Thor-2.jpg" alt="" class="portada" id="rojo"></a>
+                <a href="https://www.youtube.com/watch?v=iQ8MbSLigsE&list=PLhR42QxxGvMZA9nej4fsrcH4HbSoN4bXB&ab_channel=MovieclipsLa" target="_blank"><img src="./imagenes/Portada-Spiderman-2.jpg" alt="" class="portada" id="verde"></a>
+                <a href="https://www.youtube.com/watch?v=DbUVevG3kjU&list=PLdM370bC4nsQmoLXjsNFB8qabK0p_m-tM&ab_channel=JustCinematic" target="_blank"><img src="./imagenes/Portada-Avengers-1.jpg" alt="" class="portada" id="azul"></a>
+                <a href="https://www.youtube.com/watch?v=8fpmarrEFSY&list=PLimAIdWviQSO7nK6Lm6n6LYANpXhM2P67&ab_channel=MEJORESMOMENTOSFILMS" target="_blank"><img src="./imagenes/Portada-Shang-chi-and-the-Legend-ofthe-ten-rings.jpg" alt="" class="portada" id="azul-claro"></a>
                 <h1 class="espacio">E</h1>
                 <h2>Universo Cinematografico de Marvel:</h2>
                 <p id="espacio">E</p>
-                <a href="https://www.youtube.com/watch?v=aWzlQ2N6qqg" target="_blank"><img src="./imagenes/Portada-Doctor-Strange-2-Multiverse-of-Madness.jpg" alt="" class="portada" id="rojo"></a>
-                <a href="https://www.youtube.com/watch?v=823iAZOEKt8" target="_blank"><img src="./imagenes/Portada-Avengers-Infinity-War.jpg" alt="" class="portada" id="naranja"></a>
-                <a href="https://www.youtube.com/watch?v=6QkTCmhOzuA" target="_blank"><img src="./imagenes/Portada-Spiderman-3-No-Way-Home.jpg" alt="" class="portada" id="rojo"></a>
-                <a href="https://www.youtube.com/watch?v=znk2OICHbjY" target="_blank"><img src="./imagenes/Portada-Avengers-End-Game.jpg" alt="" class="portada" id="morado"></a>
-                <a href="https://www.youtube.com/watch?v=yNXfOOL8824" target="_blank"><img src="./imagenes/Portada-Avengers-1.jpg" alt="" class="portada" id="azul"></a>
-                <a href="https://www.youtube.com/watch?v=P2TA4kB6EcI" target="_blank"><img src="./imagenes/Portada-el-increible-hulk.jpg" alt="" class="portada" id="verde"></a>
-                <a href="https://www.youtube.com/watch?v=BPjbiZQmBI4" target="_blank"><img src="./imagenes/Portada-Black-Panther-2-Wakanda-Forever.jpg" alt="" class="portada" id="morado"></a>
-                <a href="https://www.youtube.com/watch?v=7SlILk2WMTI" target="_blank"><img src="./imagenes/Portada-Capitán-américa-2.jpg" alt="" class="portada" id="azul"></a>
+                <a href="https://www.youtube.com/watch?v=5aXJXkmZh1k&list=PLZM_vrwo7qfeRHbdUl0OXSchrLZuUXST8&index=1" target="_blank"><img src="./imagenes/Portada-Doctor-Strange-2-Multiverse-of-Madness.jpg" alt="" class="portada" id="rojo"></a>
+                <a href="https://www.youtube.com/watch?v=BSKQ6MOAWtE&list=PLIw4JuB69kRpOz7V0esfzdBwP8VnW8eiZ&index=1&ab_channel=MRMARVEL" target="_blank"><img src="./imagenes/Portada-Avengers-Infinity-War.jpg" alt="" class="portada" id="naranja"></a>
+                <a href="https://www.youtube.com/watch?v=CIRQTZ4yZrI&list=PLOx4pXZYwcTNRqz0teHJpdguIyTIf9d9T&ab_channel=MovsFilms" target="_blank"><img src="./imagenes/Portada-Spiderman-3-No-Way-Home.jpg" alt="" class="portada" id="rojo"></a>
+                <a href="https://www.youtube.com/watch?v=nrwnXhclSBc&list=PLupnTlEAVwfe178COvwhBVcn2qoiDmwje&index=2&ab_channel=TurbopelisHD" target="_blank"><img src="./imagenes/Portada-Avengers-End-Game.jpg" alt="" class="portada" id="morado"></a>
+                <a href="https://www.youtube.com/watch?v=DbUVevG3kjU&list=PLdM370bC4nsQmoLXjsNFB8qabK0p_m-tM&ab_channel=JustCinematic" target="_blank"><img src="./imagenes/Portada-Avengers-1.jpg" alt="" class="portada" id="azul"></a>
+                <a href="https://www.youtube.com/watch?v=_FZZ375kI4E&ab_channel=%E2%84%A2Devytofficial5k%E2%84%A2" target="_blank"><img src="./imagenes/Portada-el-increible-hulk.jpg" alt="" class="portada" id="verde"></a>
+                <a href="https://www.youtube.com/watch?v=ksdQ95iSJqc&list=PLpTIXiiV0-YWgBoECnGY0jkQwuaCNv9ME&index=1&ab_channel=RebeccaLara" target="_blank"><img src="./imagenes/Portada-Black-Panther-2-Wakanda-Forever.jpg" alt="" class="portada" id="morado"></a>
+                <a href="https://www.youtube.com/watch?v=0qW00OQvXY0&list=PLVwtWN6xFrCXwO9VYw8bYmw4FhnSenLGm&ab_channel=MoviesLA" target="_blank"><img src="./imagenes/Portada-Capitán-américa-2.jpg" alt="" class="portada" id="azul"></a>
                 <div class="espacio"><h1>E</h1></div>
             </div>
         </main>
