Empecé el formulario para registrarse en la pagina en el index y en css

--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>RAKUTEN_TV</title>
+        <title>BRY_TV</title>
         <link rel="stylesheet" href="botones.css">
         <link rel="stylesheet" href="estilos.css">
         <link rel="stylesheet" href="sombras-p.css">
+        <link rel="stylesheet" href="formulario.css">
     </head>
     <body style="background-image: url(./imagenes/background-body.jpg);">
         <header style="background-image: url(./imagenes/);">
-            <a class="logo" href="https://rakuten.tv/es" target="_blank">RAKUTEN_TV</a>
+            <a class="logo" href="https://rakuten.tv/es" target="_blank">BRY_TV</a>
             <nav class="navigation">
                 <div class="estreno">
                     <a class="espacio" href="#">-------</a>
@@ -21,7 +22,7 @@
                     <input type="text" placeholder="Buscar...">
                 </div>
                 <div class="login">
-                    <a href="https://support.google.com/android/?hl=es-419#topic=7313011" target="_blank">AYUDA Y DISPOSITIVOS</a>
+                    <a class="ayuda" href="https://support.google.com/android/?hl=es-419#topic=7313011" target="_blank">AYUDA Y DISPOSITIVOS</a>
                     <a class="espacio" href="#">--------</a>
                     <button class="btn-entrar">ENTRAR</button>
                     <a class="espacio" href="#">---</a>
@@ -29,9 +30,29 @@
                 </div> 
             </nav>
         </header>
-        <h1>p</h1>
-        <h1 class="prox">P R O X I M A M E N T E:</h1>
-        <h1>p</h1>
+            <!-- <section class="form-register">
+                <span class="icon-close"><ion-icon name="close"></ion-icon>
+                </span>
+                <form action="#">
+                    <h4 class="form-regis">Registro</h4>
+                    <input class="controls" type="text" id="nombre" name="name" placeholder="ingrese su nombre">
+                    <input class="controls" type="text" id="apellido" name="apellido" placeholder="ingrese su apellido">    
+                    <input class="controls" type="email" id="email" name="email" placeholder="ingrese su email">   
+                    <input class="controls" type="password" placeholder="ingrese su contraseña">   
+                    <input class="controls" type="text" id="telefono" name="telefono" placeholder="ingrese su numero de telefono">               
+                    <nav>
+                        <ul>
+                            <p class="espacio">p</p>
+                            <li><p>Estoy de acuerdo con <a href="https://www.gov.co/terminos-y-condiciones" target="_blank">Terminos y condiciones</a></p></li>
+                            <input class="botons" type="submit" value="Registrar">
+                            <li><p><a href="https://rakuten.tv/es" target="_blank">¿Ya tienes cuenta?</a></p></li>
+                        </ul>
+                    </nav>
+                </form>
+            </section> -->
+            <h1 class="espacio">p</h1>
+        <h1 class="prox">P R O X I M A M E N T E :</h1>
+        <h1 class="espacio">p</h1>
             <div class="titulo"><a href="https://www.youtube.com/watch?v=51S4llUG5QM" target="_blank"><img src="./imagenes/background-ant-man-quantumania.jpg" alt="" class="port-grande"></a><h3></h3></div>
         <main class="todas-p">
             <div>
@@ -82,5 +103,7 @@
                 <div class="espacio"><h1>E</h1></div>
             </div>
         </main>
+        <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+        <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     </body>
 </html>
